--- a/index.html
+++ b/index.html
@@ -2,12 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Bart vd Berg V2</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<link rel="stylesheet" href="style.css">
+    <title>Portfolio Bart vd Berg</title>
 </head>
 <body>
-    
-    HALOW
+    <nav><h1>Portfolio Bart vd Berg</h1>
+    <div class="nav">
+    <a href="index.html"><button class="btn btn-primary btn-sm">Home</button></a>|
+    <a href="#"><button class="btn btn-primary btn-sm">About</button></a>|
+    <a href="todo.html"><button class="btn btn-primary btn-sm">To-Do</button></a>|
+    <a href="#"><button class="btn btn-primary btn-sm">W0rk</button></a>
+    </div>
+    </nav>
+
+<div class="container col-md-6 col-xl-12">
+ 
+    <div class="row1">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore est nulla asperiores sapiente molestias similique consequuntur. Laudantium maiores expedita non totam nesciunt dolore eveniet! Ab nulla placeat totam esse optio.</div>
+        <div class="row2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero adipisci eos tempora nihil rerum consectetur in excepturi voluptates quae molestiae!</div>
+            <div class="row3">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic cupiditate dolore, et veritatis impedit odit vero omnis ad excepturi nisi similique fuga doloremque sed praesentium velit iure est laudantium esse perferendis neque! Dolorum obcaecati adipisci iusto consequatur rem iste at?</div>
+                <div class="row4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis maiores id doloribus consequuntur! Vitae natus voluptates perspiciatis vel cupiditate officia architecto sunt, eligendi quaerat, voluptatem sit, illo explicabo modi placeat?</div>
+                <div class="row5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis maiores id doloribus consequuntur! Vitae natus voluptates perspiciatis vel cupiditate officia architecto sunt, eligendi quaerat, voluptatem sit, illo explicabo modi placeat?</div>
+                <div class="row6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis maiores id doloribus consequuntur! Vitae natus voluptates perspiciatis vel cupiditate officia architecto sunt, eligendi quaerat, voluptatem sit, illo explicabo modi placeat?</div>
+            </div>
+
+
+</div>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<footer>Bart vd Berg</footer>
 </body>
 </html>
